# qwen-tool-calling

./: .gitignore  .justfile  .pre-commit-config.yaml  Qwen2_5_Coder_(1_5B)_Tool_Calling.ipynb  example.env  pyproject.toml  ruff.toml  shell.nix
