[project]
name = "qwen_tool_calling"
version = "0.0.1"
description = "A template for fine tuning Qwen coder with tool calling."
authors = [
  { name = "Miguel Villa Floran", email = "miguel.villafloran@gmail.com" },
]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
  # "dspy>=3.0.4",
  # "dotenv>=0.9.9",
  # "typer>=0.20.0",
  # "pydantic-ai-slim[google]>=1.27.0",
  "unsloth>=2025.12.5",
]

[dependency-groups]
dev = ["pre-commit>=4.1.0", "ipykernel>=6.29.5"]
