[project]
name = "qwen_tool_calling"
version = "0.0.1"
description = "A template for fine tuning Qwen coder with tool calling."
authors = [
  { name = "Miguel Villa Floran", email = "miguel.villafloran@gmail.com" },
]
requires-python = ">=3.11"
readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
  "fastapi>=0.123.4",
  "uvicorn[standard]>=0.38.0",
  "pydantic>=2.12.5",
  "pydantic-settings>=2.0.0",
  "numpy>=2.3.5",
  "torch>=2.9.1",
  "torchvision",
  "torchaudio",
  "transformers>=4.57.3",
  "accelerate>=1.12.0",
  "huggingface-hub>=0.36.0",
  "prometheus-client>=0.23.1",
  "pyyaml>=6.0.3",
  "python-dotenv>=1.2.1",
  "pillow>=12.0.0",
  "python-multipart>=0.0.20",
  "httpx>=0.28.1",
  "xxhash>=3.5.0",
  "unsloth>=2025.12.5",
  "dotenv>=0.9.9",
]

[tool.uv]
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch" }
triton = { index = "pytorch" }

[dependency-groups]
dev = ["pre-commit>=4.1.0", "ipykernel>=6.29.5"]
